# rust-todos

./: Cargo.toml  Dioxus.toml  mise.toml  readme.md
assets/: tailwind.css
src/: lib.rs  main.rs
